mobile menu fix on tablet size

--- a/src/typescript/web/src/style/index.scss
+++ b/src/typescript/web/src/style/index.scss
@@ -605,27 +605,31 @@ body {
   .sidebar {
     width: 320px;
     min-width: 320px;
+    max-width: 320px;
     bottom: 0;
     position: relative;
 
     // --- mobile sidebar
-    // @include media-breakpoint-down(xs) {
-    //   width: 100vw;
-    // }
-    @include media-breakpoint-down(sm) {
+    @include media-breakpoint-down(md) {
       position: fixed;
       top: 0;
       bottom: 0;
-      width: 100vw;
+      // width: 100vw;
       z-index: 5;
-      right: -110vw;
+      left: -110vw;
       opacity: 0;
       transition: all 0.3s;
       &.open {
-        right: 0;
+        left: 0;
         opacity: 1;
       }
     }
+    @include media-breakpoint-only(xs) {
+      width: 100vw;
+      min-width: 100vw;
+      max-width: 100vw;
+    }
+
     background-color: $c-sidebar_bg;
     display: flex;
     flex-flow: column nowrap;
